# csc299-project

./: Final project  README.md  app.py
Final/: README.md  SPECIFICATIONS.md  Summary.md  main.py  pkms_data.db  prototype_main.py  video.txt
Final/tests/: test_project.py
tasks1/: app.py
tasks2/: task_manager.py
tasks3/: pyproject.toml
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_inc.py  test_tasks.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: README.md  tasks.py
tasks5/.github/prompts/: SPECKIT_CONSTITUTION.md  SPECKIT_SPEC.md
tasks5/tests/: test_tasks.py
